--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'hw06-annotations'
 include 'hw08-gc:homework'
 include 'hw10-byteCodes:homework'
 include 'hw12-solid:homework'
+include 'hw15-structuralPatterns:homework'
