--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include 'hw08-gc:homework'
 include 'hw10-byteCodes:homework'
 include 'hw12-solid:homework'
 include 'hw15-structuralPatterns:homework'
+include 'hw16-io:homework'
