--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'hw12-solid:homework'
 include 'hw15-structuralPatterns:homework'
 include 'hw18-jdbc:demo'
 include 'hw18-jdbc:homework'
+include 'hw21-jpql:homework'
