--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include 'hw15-structuralPatterns:homework'
 include 'hw18-jdbc:demo'
 include 'hw18-jdbc:homework'
 include 'hw21-jpql:homework'
+include 'hw22-cache:homework'
