--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,5 @@ include 'hw18-jdbc:demo'
 include 'hw18-jdbc:homework'
 include 'hw21-jpql:homework'
 include 'hw22-cache:homework'
+include 'hw24-webServer:homework'
+include 'hw25-di:homework'
