--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'hw18-jdbc:demo'
 include 'hw18-jdbc:homework'
 include 'hw21-jpql:homework'
 include 'hw22-cache:homework'
+include 'hw28-springDataJdbc:homework'
