add homework 33 kill the boss

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,8 @@ include 'hw18-jdbc:homework'
 include 'hw21-jpql:homework'
 include 'hw22-cache:homework'
 include 'hw24-webServer:homework'
+include 'hw25-di:homework'
+include 'hw28-springDataJdbc:homework'
+include 'hw31-executors:homework'
+include 'hw32-concurrentCollections:QueueDemo'
+include 'hw33-multiprocess:homework'
